--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
